# main-laravel/app/Http/Swagger/Model/UserLogin.php
@@ -1,0 +1,19 @@
+<?php namespace App;
+
+/**
+ * @SWG\Definition(@SWG\Xml(name="UserLogin"))
+ */
+class UserLogin extends Model {
+
+	/**
+     * @var string
+     * @SWG\Property()
+     */
+	public $email;
+
+     /**
+     * @var string
+     * @SWG\Property()
+     */
+     public $password;
+}
