# main-laravel/resources/views/auth/login.blade.php
@@ -30,7 +30,7 @@
 	          </div>
           @endif
 
-					<form class="form-horizontal" role="form" method="POST" action="{{ url('/auth/login') }}">
+					<form class="form-horizontal" role="form" method="POST" action="{{ url('/login') }}">
 						<input type="hidden" name="_token" value="{{ csrf_token() }}">
 
             <div class="form-group text-center">
